[package]
name = "news_app"
version = "0.1.0"
edition = "2021"
description = "A simple cli news App"
licence = "MIT"
authors = ["HagimoDev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
dotenv = "0.15.0"


newsapi = {path="./newsapi",features=["async"]}

termimad = "0.20.6"
tokio = {version ="1.23.0",features = ["full"]} 


