[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"
description = "A simple cli news App"
licence = "MIT"
authors = ["HagimoDev"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = {version ="2.5.0",features = ["json"]} 
serde = {version ="1.0.151",features = ["derive"]} 
serde_json = "1.0.91"
thiserror = "1.0.38"
url = "2.3.1"
reqwest = {version ="0.11.13",features = ["json"],optional= true}

[features]
async = ["reqwest"]